re PR tree-optimization/51117 (rev.181172 causes glibc build failure)

PR tree-optimization/51117
	* tree-eh.c (optimize_clobbers): New function.
	(execute_lower_eh_dispatch): Call it.

Co-Authored-By: Andrew Pinski <apinski@cavium.com>

From-SVN: r182158